# quick_chip

./: README.md  config.py  index.py  pyproject.toml
biz/: user.py
models/: core.py  db.py
rule/: rule.py
ui/: __init__.py  board.py  common.py  game_init.py  record.py  status.py  user.py
