[tool.poetry]
name = "quick-chip"
version = "0.1.0"
description = "A simple app to Simulate chips in a board game"
authors = ["zhonghaoran <zhonghaoran.37@bytedance.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.29.0"
watchdog = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
